--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 			</div>
 
 			<div class="additional-btns">
-			<button id="btn-color-reset">Light Color Theme</button>
-			<button id="btn-dark-colors">Dark Color Theme</button>
+			<button id="btn-color-reset">Light Mode</button>
+			<button id="btn-dark-colors">Dark Mode</button>
 			<button id="btn-skip">Skip This Phrase =></button>
 			<button id="btn-hint" class="hint-abled">Show Hint</button>
 			<ul id="hint-text"></ul>
